<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_launcher" tools:context=".Launcher">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/launch_Title"
        android:id="@+id/launch_title"
        android:layout_centerHorizontal="true" />
    <Button
        style="@style/launcherButton"
        android:text="@string/spotstreamer"
        android:id="@+id/launch_bttnSpotifyStream"
        android:layout_below="@+id/launch_title"
        android:layout_alignStart="@+id/launch_bttnLib"
        android:onClick="onClick"
        />

    <Button
        style="@style/launcherButton"
        android:text="@string/ScoresApp"
        android:id="@+id/launch_bttnScores"
        android:layout_below="@+id/launch_bttnSpotifyStream"
        android:layout_alignStart="@+id/launch_bttnSpotifyStream"
        android:onClick="onClick"
        />

    <Button
        style="@style/launcherButton"
        android:text="@string/LibraryApp"
        android:id="@+id/launch_bttnLib"
        android:layout_below="@+id/launch_bttnScores"
        android:layout_centerHorizontal="true"
        android:onClick="onClick"
        />

    <Button
        style="@style/launcherButton"
        android:text="@string/builditbigger"
        android:id="@+id/launch_bttnBuild"
        android:layout_below="@+id/launch_bttnLib"
        android:layout_alignStart="@+id/launch_bttnLib"
        android:onClick="onClick"
        />

    <Button
        style="@style/launcherButton"
        android:text="@string/xyzreader"
        android:id="@+id/launch_bttnXYZ"
        android:onClick="onClick"
        android:layout_below="@+id/launch_bttnBuild"
        android:layout_alignEnd="@+id/launch_bttnBuild" />

    <Button
        style="@style/launcherButton"
        android:text="@string/capstone"
        android:id="@+id/launch_bttnCapstone"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/launch_bttnXYZ"
        android:layout_alignEnd="@+id/launch_bttnXYZ"
        android:onClick="onClick"
        />



</RelativeLayout>
